--- a/new.html
+++ b/new.html
@@ -12,7 +12,7 @@
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb(112, 120, 114);
+    background-color: rgb(103, 112, 104);
 </style>
 </head>
 <body><center>
@@ -22,7 +22,8 @@
         <li><img src="https://roberthunt.com/images/le.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="700" height="479"/></li>
         <li><img src="https://roberthunt.com/images/arch.jpg" alt="Lands End Big Sur California Oil Painting" width="842" height="479"/></li>
         <li><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/></li>
-		<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
+	<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
+	<li><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/></li>
     </ul>
 
     <button type="button" class="slider-nav"></button>
@@ -32,6 +33,7 @@
         <button class="active"></button>
         <button></button>
         <button></button>
+	<button></button>
 	<button></button>
     </div>
 </div>
