--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+<meta charset="UTF-8" />
+<link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <meta name="author" content="R M Hunt Fine Art Oil Paintings">
 <meta name="description" content="Oil Paintings by R M Hunt">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, art, museum, gallery">
-  <meta charset="UTF-8" />
-    <title>RM Hunt Fine Art</title>
+<title>RM Hunt Fine Art</title>
 <style>
   body      {
-    font-family: 'Cinzel';font-size: 38px;
+    font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(103, 112, 104);
 }
 </style>
   </head>
   <body><center>
-    <font color="#bbb"><p><center>R M Hunt Fine Art</center></p></font><br>
+    <font color="#fff"><p><center>R M Hunt Fine Art</center></p></font><br>
     <center><img src="images/le.jpg" alt="Lands End" width="700" height="479"/></center>
-    <font color="#bbb">&ensp;<p style="font-size:14px">Inquiries: info (at) roberthunt.com <br>&copy; 2025 R M Hunt Fine Art</p></font>
+    <font color="#fff">&ensp;<p style="font-size:14px">Inquiries: info (at) roberthunt.com <br>&copy; 2025 R M Hunt Fine Art</p></font>
   </body>
   </center>
 </html>
