--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <head>
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <style>
-  body { background:rgb(103, 112, 104); }
+  body { background-color: rgb(103, 112, 104); }
 form { max-width:420px; margin:50px auto; }
 
 .feedback-input {
