--- a/info.html
+++ b/info.html
@@ -1,8 +1,14 @@
 <html>
 <head>
+<meta charset="UTF-8" />
+<meta name="author" content="R M Hunt">
+<meta name="description" content="Oil Paintings by R M Hunt">
+<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <style>
-  body { background-color: rgb(103, 112, 104); }
+  body { 
+  background-color: rgb(103, 112, 104); 
+  }
 form { max-width:420px; margin:50px auto; }
 
 .feedback-input {
