--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <style>
   body { 
-  background-color: rgb(103, 112, 104); 
+  background-color: rgb(103, 112, 104) !important; 
   }
 form { max-width:420px; margin:50px auto; }
 
