--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="author" content="R M Hunt">
 <meta name="description" content="Oil Paintings by R M Hunt">
-<meta name="keywords" content="oil, paintings, landscapes, nature, traditional">
+<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
 <title>RM Hunt Fine Art - Fine Art Oil Paintings</title>
@@ -13,18 +13,23 @@
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(103, 112, 104);
+	hr.line1 {
+  border-top: 1px solid white; width:20%;
+  
 </style>
 </head>
-<body><center>
-  <font color="#fff"><p><center>R  M Hunt Fine Art</center></p></font><br>
+<body><center>&ensp;
+  <font color="#fff"><center>R  M Hunt Fine Art</center></font>
+  <hr class="line1">
+  <font color="#fff"><p style="font-size:16px">Selected Works</p></font>
   <div class="swiffy-slider slider-nav-chevron slider-indicators-round slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
-    <ul class="slider-container">
+    <p><ul class="slider-container">
         <li><img src="https://roberthunt.com/images/le.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="700" height="479"/></li>
         <li><img src="https://roberthunt.com/images/arch.jpg" alt="Lands End Big Sur California Oil Painting" width="842" height="479"/></li>
         <li><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/></li>
-	<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
-	<li><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/></li>
-    </ul>
+		<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
+		<li><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/></li>
+    </ul></p>
 
     <button type="button" class="slider-nav"></button>
     <button type="button" class="slider-nav slider-nav-next"></button>
@@ -33,12 +38,12 @@
         <button class="active"></button>
         <button></button>
         <button></button>
-	<button></button>
-	<button></button>
+		<button></button>
+		<button></button>
     </div>
 </div>
     <br>
     
-    <font color="#fff">&ensp;<p style="font-size:16px">Inquiries: info (at) roberthunt.com <br>&copy; 2025 R M Hunt Fine Art</p></font>
+    <font color="#fff">&ensp;<p style="font-size:16px"><a href="https://roberthunt.com/info.html"><font color="#fff"><span style='text-decoration:none;text-underline:none'>Inquiries: info (at) roberthunt.com </span></font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
  </body></center>
 </html>
