--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <style>
   body { 
-  background-color: rgb(103, 112, 104) !important; 
+  background-color: rgb(103, 112, 104); 
   }
 form { max-width:420px; margin:50px auto; }
 
@@ -69,7 +69,7 @@ textarea {
 <body><center>&ensp;
   <font color="#fff"><p class="p2" style="font-size:36px">R  M Hunt Fine Art</p></font>
   
-  <font color="#fff"><p class="p2" style="font-size:26px">Inquieres</p></font>
+  <font color="#fff"><p class="p2" style="font-size:26px">Inquiries</p></font>
 
 
 <form
