--- a/info.html
+++ b/info.html
@@ -55,7 +55,10 @@ textarea {
 
 .p2 {
   font-family: Cormorant SC;
-}
+  }
+hr.line1 {
+  border-top: 1px solid white; width:20%;
+  }
 </style>
     <meta charset="UTF-8" />
     <title>RM Hunt Fine Art</title>
@@ -68,8 +71,9 @@ textarea {
 <!------ Include the above in your HEAD tag ---------->
 <body><center>&ensp;
   <font color="#fff"><p class="p2" style="font-size:36px">R  M Hunt Fine Art</p></font>
+  <hr class="line1">
+  <font color="#fff"><p class="p2" style="font-size:26px">Inquiries</p></font><br>
   
-  <font color="#fff"><p class="p2" style="font-size:26px">Inquiries</p></font>
 
 
 <form
@@ -80,7 +84,9 @@ textarea {
   <input name="email" type="text" class="feedback-input" placeholder="Email" />
   <textarea name="text" class="feedback-input" placeholder="Message"></textarea>
   <input type="submit" value="SUBMIT"/>
-</form>
+</form><br>
+
+<font color="#fff"><p class="p2" style="font-size:26px">Or Send An Email To: <a style="text-decoration: none; color: #fff;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
 
 
 </div>
