--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
-<meta name="author" content="R M Hunt Fine Art Oil Paintings">
+<meta name="author" content="R M Hunt">
 <meta name="description" content="Oil Paintings by R M Hunt">
-<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, art, museum, gallery">
-<title>RM Hunt Fine Art</title>
+<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
+<link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
+<title>RM Hunt Fine Art - Fine Art Oil Paintings</title>
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb(103, 112, 104);
+    background-color: rgb(112, 120, 114) !important;
 }
+hr.line1 {
+  border-top: 1px solid white; width:20%;
+  }
 </style>
+    
   </head>
-  <body><center>
-    <font color="#fff"><p><center>R M Hunt Fine Art</center></p></font><br>
-    <center><img src="images/le.jpg" alt="Lands End" width="700" height="479"/></center>
-    <font color="#fff">&ensp;<p style="font-size:14px">Inquiries: info (at) roberthunt.com <br>&copy; 2025 R M Hunt Fine Art</p></font>
-  </body>
-  </center>
+  <body><center>&ensp;
+  <font color="#fff"><center>R  M Hunt Fine Art</center></font>
+  <hr class="line1">&ensp;
+    
+    <center><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/></center>
+    <font color="#fff">&ensp;<p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
+  </body></center>
 </html>
