--- a/new.html
+++ b/new.html
@@ -15,17 +15,17 @@
     background-color: rgb(103, 112, 104);
 	hr.line1 {
   border-top: 1px solid white; width:20%;
-  
+  }
 </style>
 </head>
 <body><center>&ensp;
   <font color="#fff"><center>R  M Hunt Fine Art</center></font>
   <hr class="line1">
-  <font color="#fff"><p style="font-size:16px">Selected Works</p></font>
+  <font color="#fff"><p style="font-size:24px">Selected Works</p></font>
   <div class="swiffy-slider slider-nav-chevron slider-indicators-round slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
     <p><ul class="slider-container">
-        <li><img src="https://roberthunt.com/images/le.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="700" height="479"/></li>
-        <li><img src="https://roberthunt.com/images/arch.jpg" alt="Lands End Big Sur California Oil Painting" width="842" height="479"/></li>
+        <li><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/></li>
+        <li><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/></li>
         <li><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/></li>
 		<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
 		<li><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/></li>
@@ -42,8 +42,8 @@
 		<button></button>
     </div>
 </div>
-    <br>
-    
-    <font color="#fff">&ensp;<p style="font-size:16px"><a href="https://roberthunt.com/info.html"><font color="#fff"><span style='text-decoration:none;text-underline:none'>Inquiries: info (at) roberthunt.com </span></font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
+&ensp;
+    <hr class="line1">
+    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
  </body></center>
 </html>
