--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@ hr.line1 {
   <body><center>&ensp;
   <font color="#fff"><center>R  M Hunt Fine Art</center></font>
   <hr class="line1">&ensp;
-    
+   
     <center><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/></center>
-    <font color="#fff">&ensp;<p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
+	&ensp;
+	<hr class="line1">
+    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
   </body></center>
 </html>
