--- a/new.html
+++ b/new.html
@@ -17,6 +17,9 @@
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
+  img {
+    pointer-events: none;
+}
 </style>
 </head>
 <body><center>&ensp;
