--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(112, 120, 114) !important;
+	
 }
 hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-img {
-    pointer-events: none;
-}
+
 </style>
     
   </head>
@@ -29,5 +28,10 @@ img {
 	&ensp;
 	<hr class="line1">
     <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
+	<script>
+    document.addEventListener("contextmenu", function(e){
+            e.preventDefault();
+        }, false);
+</script>
   </body></center>
 </html>
