--- a/new.html
+++ b/new.html
@@ -17,9 +17,7 @@
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-  img {
-    pointer-events: none;
-}
+  
 </style>
 </head>
 <body><center>&ensp;
@@ -49,5 +47,11 @@
 &ensp;
     <hr class="line1">
     <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html" target="_blank">For More Information Or Feedback</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
+<script>
+    document.addEventListener("contextmenu", function(e){
+            e.preventDefault();
+        }, false);
+</script>	
+	
  </body></center>
 </html>
