--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@ hr.line1 {
             e.preventDefault();
         }, false);
 </script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fbea1094ed0948c8999c237d5cb53f03"}'></script><!-- End Cloudflare Web Analytics -->
   </body></center>
 </html>
