--- a/new.html
+++ b/new.html
@@ -26,11 +26,10 @@
   <font color="#fff"><p style="font-size:24px">Selected Works</p></font>
   <div class="swiffy-slider slider-nav-chevron slider-indicators-round slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
     <p><ul class="slider-container">
-        <li><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/></li>
-        <li><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/></li>
-        <li><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/></li>
-		<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
-		<li><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/></li>
+        <li style="font-size:24px"><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/><br><font color="#fff"><p>Lands End | Big Sur California</p></font></li>
+        <li style="font-size:24px"><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/><br><font color="#fff"><p>Sunrise At Arches National Park</p></font></li>
+        <li style="font-size:24px"><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/><br><font color="#fff"><p>Sunset At Robbins Pond</p></font></li></li>
+		<li style="font-size:24px"><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/><br><font color="#fff"><p>Pawnee Buttes | Grasslands | Colorado</p></font></li>
     </ul></p>
 
     <button type="button" class="slider-nav"></button>
