--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ hr.line1 {
 	<hr class="line1">
     <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
 	
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fbea1094ed0948c8999c237d5cb53f03"}'></script><!-- End Cloudflare Web Analytics -->
+<!-- goat --><script data-goatcounter="https://rmhunt.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script><!-- End of goat -->
   </body></center>
 </html>
