--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="description" content="Oil Paintings by R M Hunt">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
-script-src  https://gc.zgo.at
-connect-src https://rmhunt.goatcounter.com/count
+<script-src  https://gc.zgo.at>
+<connect-src https://rmhunt.goatcounter.com/count>
 
 <title>RM Hunt Fine Art - Fine Art Oil Paintings</title>
 <style>
