--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script-src  https://gc.zgo.at>
 <connect-src https://rmhunt.goatcounter.com/count>
 
-<title>RM Hunt Fine Art - Fine Art Oil Paintings</title>
+<title>RM Hunt Fine Art - Fine Art Landscape Paintings</title>
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
