--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="author" content="R M Hunt">
-<meta name="description" content="Oil Paintings by R M Hunt">
+<meta name="description" content="Realist Landscape Oil Paintings of Mountains, Seascapes, Southwest, Arches National Park, Big Sur, Yosemite, Colorado, California, Italy ">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <script-src  https://gc.zgo.at>
 <connect-src https://rmhunt.goatcounter.com/count>
-
-<title>RM Hunt Fine Art - Fine Art Landscape Paintings</title>
+<title>RM Hunt Fine Art Fine Art Landscape Paintings</title>
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(112, 120, 114) !important;
-	
-}
-hr.line1 {
+	background-image: url('images/blue.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+  background-size: cover;
+	}
+	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-
 </style>
     
   </head>
@@ -31,8 +32,12 @@ hr.line1 {
 	&ensp;
 	<hr class="line1">
     <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
-	
-<!-- goat --><script data-goatcounter="https://rmhunt.goatcounter.com/count"
+	<!--<script>
+    document.addEventListener("contextmenu", function(e){
+            e.preventDefault();
+        }, false);
+</script>-->
+<!-- <!-- goat --><script data-goatcounter="https://rmhunt.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script><!-- End of goat -->
   </body></center>
 </html>
