--- a/info.html
+++ b/info.html
@@ -2,12 +2,16 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="author" content="R M Hunt">
-<meta name="description" content="Oil Paintings by R M Hunt">
+<meta name="description" content="Email for information or questions about Landscape Oil Paintings by R M Hunt">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <style>
   body { 
   background-color: rgb(103, 112, 104) !important; 
+  background-image: url('images/blue.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+  background-size: cover;
   }
 form { max-width:420px; margin:50px auto; }
 
@@ -86,7 +90,7 @@ hr.line1 {
   <input type="submit" value="SUBMIT"/>
 </form><br>
 
-<font color="#fff"><p class="p2" style="font-size:26px">Or Send An Email To: <a style="text-decoration: none; color: #fff;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
+<font color="#fff"><p class="p2" style="font-size:26px">Or Send An Email To: <br><a style="text-decoration: none; color: #fff;" href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p></font>
 
 
 </div>
