--- a/info.html
+++ b/info.html
@@ -74,7 +74,7 @@ hr.line1 {
 
 <!------ Include the above in your HEAD tag ---------->
 <body><center>&ensp;
-  <font color="#fff"><p class="p2" style="font-size:36px">R  M Hunt Fine Art</p></font>
+  <font color="#fff"><p class="p2" style="font-size:36px"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com">R  M Hunt Fine Art</p></font>
   <hr class="line1">
   <font color="#fff"><p class="p2" style="font-size:26px">Inquiries</p></font><br>
   
