--- a/new.html
+++ b/new.html
@@ -13,6 +13,10 @@
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(103, 112, 104);
+    background-image: url('images/blue.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+  background-size: cover;
 	}
 	hr.line1 {
   border-top: 1px solid white; width:20%;
