--- a/new.html
+++ b/new.html
@@ -17,6 +17,8 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
   background-size: cover;
+	  max-width: 100%;
+    height: 100%;
 	}
 	hr.line1 {
   border-top: 1px solid white; width:20%;
