--- a/new.html
+++ b/new.html
@@ -17,6 +17,7 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
   background-size: cover;
+	  position: fixed;
 	  max-width: 100%;
     height: 100%;
 	}
