--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
-<title>RM Hunt Fine Art - Fine Art Oil Paintings</title>
+<title>RM Hunt Fine Art  Fine Art Landscape Oil Paintings</title>
 <script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
 <style>
   body      {
@@ -17,10 +17,8 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
   background-size: cover;
-	  position: fixed;
-	  max-width: 100%;
-    height: 100%;
-	}
+	  
+	  }
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
@@ -53,11 +51,11 @@
 &ensp;
     <hr class="line1">
     <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html" target="_blank">For More Information Or Feedback</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
-<script>
+<!--<script>
     document.addEventListener("contextmenu", function(e){
             e.preventDefault();
         }, false);
-</script>	
+</script>-->
 	
  </body></center>
 </html>
