--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
-<title>RM Hunt Fine Art  Fine Art Landscape Oil Paintings</title>
+<title>RM Hunt Fine Art  Landscape Oil Paintings</title>
 <script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
 <style>
   body      {
