--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <script-src  https://gc.zgo.at>
 <connect-src https://rmhunt.goatcounter.com/count>
-<title>RM Hunt Fine Art Fine Art Landscape Paintings</title>
+<title>RM Hunt Fine Art Landscape Oil Paintings</title>
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
