--- a/new.html
+++ b/new.html
@@ -22,7 +22,10 @@
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-  
+  img {
+  max-width: 100%;
+  height: auto;
+}
 </style>
 </head>
 <body><center>&ensp;
