--- a/new.html
+++ b/new.html
@@ -22,10 +22,16 @@
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-  img {
-  max-width: 100%;
-  height: auto;
-}
+   @media only screen and (orientation: landscape) {
+  body {font-family: 'Cormorant SC';font-size: 38px;
+    background-color: rgb(103, 112, 104);
+    background-image: url('blue.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+  background-size: cover;
+	  
+	  }
+	  }
 </style>
 </head>
 <body><center>&ensp;
