--- a/new.html
+++ b/new.html
@@ -22,10 +22,10 @@
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-   @media only screen and (orientation: landscape) {
+   @media only screen and (orientation: landscape; max-width: 600px) {
   body {font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(103, 112, 104);
-    background-image: url('blue.jpg');
+    background-image: url('images/blue.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
   background-size: cover;
