--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="author" content="R M Hunt">
-<meta name="description" content="Realist Landscape Oil Paintings of Mountains, Seascapes, Southwest, Arches National Park, Big Sur, Yosemite, Colorado, California, Italy ">
+<meta name="description" content="Realist Landscape Oil Paintings of America, South America and Europe ">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
-<script-src  https://gc.zgo.at>
-<connect-src https://rmhunt.goatcounter.com/count>
-<title>RM Hunt Fine Art Landscape Oil Paintings</title>
+<meta name="robots" content="index, follow">
+<title>R M Hunt Fine Art Landscape Oil Paintings</title>
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
