--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             e.preventDefault();
         }, false);
 </script>-->
-<!-- <!-- goat --><script data-goatcounter="https://rmhunt.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script><!-- End of goat -->
-  </body></center>
+<script data-goatcounter="https://rmhunt.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+  </center>
+  </body>
 </html>
