--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta charset="UTF-8" />
+<meta name="robots" content="index, follow">
 <meta name="author" content="R M Hunt">
-<meta name="description" content="Realist Landscape Oil Paintings of America, South America and Europe ">
+<meta name="description" content="Realist Fine Art Landscape Oil Paintings of America, South America and Europe ">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
-<meta name="robots" content="index, follow">
-<title>R M Hunt Fine Art Landscape Oil Paintings</title>
+<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+<link rel="manifest" href="ico/site.webmanifest">
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
