--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb(112, 120, 114) !important;
-	background-image: url('images/blue.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-  background-size: cover;
+    background-color: rgb(000,000,000) !important;
+	
 	}
 	hr.line1 {
   border-top: 1px solid white; width:20%;
