--- a/info.html
+++ b/info.html
@@ -1,17 +1,20 @@
 <html>
 <head>
+<title>Contact R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta charset="UTF-8" />
+<meta name="robots" content="index, follow">
 <meta name="author" content="R M Hunt">
-<meta name="description" content="Email for information or questions about Landscape Oil Paintings by R M Hunt">
+<meta name="description" content="Realist Fine Art Landscape Oil Paintings of America, South America and Europe ">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
+<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+<link rel="manifest" href="ico/site.webmanifest">
 <style>
   body { 
-  background-color: rgb(103, 112, 104) !important; 
-  background-image: url('images/blue.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-  background-size: cover;
+  background-color: rgb(000, 000, 000) !important; 
+  
   }
 form { max-width:420px; margin:50px auto; }
 
