--- a/new.html
+++ b/new.html
@@ -2,27 +2,28 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<meta name="author" content="R M Hunt">
-<meta name="description" content="Oil Paintings by R M Hunt">
-<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
+<meta name="robots" content="index, follow">
+<title>R M Hunt Fine Art Landscape Oil Paintings</title>
+<meta name="author" content="R M Hunt Fine Art Paintings">
+<meta name="description" content="Realist Fine Art Landscape Oil Paintings of America, South America and Europe ">
+<meta name="keywords" content="fine art, oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
-<title>RM Hunt Fine Art  Landscape Oil Paintings</title>
 <script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
+<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+<link rel="manifest" href="ico/site.webmanifest">
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb(103, 112, 104);
-    background-image: url('images/blue.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-  background-size: cover;
-	  
-	  }
+    background-color: rgb(000, 000, 000);!important;
+    
+	}
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
-   
+  
 </style>
 </head>
 <body><center>&ensp;
