--- a/new.html
+++ b/new.html
@@ -5,8 +5,8 @@
 <meta name="robots" content="index, follow">
 <title>R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta name="author" content="R M Hunt Fine Art Paintings">
-<meta name="description" content="Realist Fine Art Landscape Oil Paintings of America, South America and Europe ">
-<meta name="keywords" content="fine art, oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
+<meta name="description" content="Realist Fine Art Landscape Seascape Oil Paintings of America, South America and Europe ">
+<meta name="keywords" content="fine art, oil, paintings, landscapes, seascapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
 <link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
 <script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
@@ -17,7 +17,7 @@
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb(000, 000, 000);!important;
+    background-color: rgb(000, 000, 000);
     
 	}
 	hr.line1 {
@@ -36,6 +36,7 @@
         <li style="font-size:24px"><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/><br><font color="#fff"><p>Sunrise At Arches National Park</p></font></li>
         <li style="font-size:24px"><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/><br><font color="#fff"><p>Sunset At Robbins Pond</p></font></li></li>
 		<li style="font-size:24px"><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/><br><font color="#fff"><p>Pawnee Buttes | Grasslands | Colorado</p></font></li>
+		<li style="font-size:24px"><img src="https://roberthunt.com/images/sea.jpg" alt="Dawn in Ricon del Mar Colombia" width="706" height="479"/><br><font color="#fff"><p>Dawn in Ricon del Mar Colombia</p></font></li>
     </ul></p>
 
     <button type="button" class="slider-nav"></button>
@@ -45,7 +46,8 @@
         <button class="active"></button>
         <button></button>
         <button></button>
-	<button></button>
+	    <button></button>
+		<button></button>
 	
     </div>
 </div>
