--- a/new.html
+++ b/new.html
@@ -30,7 +30,7 @@
   <font color="#fff"><center>R  M Hunt Fine Art</center></font>
   <hr class="line1">
   <font color="#fff"><p style="font-size:24px">Selected Works</p></font>
-  <div class="swiffy-slider slider-nav-chevron slider-indicators-square slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein slider-nav-mousedrag">
+  <div class="swiffy-slider slider-nav-chevron slider-indicators-square slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
     <p><ul class="slider-container">
         <li style="font-size:24px"><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/><br><font color="#fff"><p>Lands End | Big Sur California</p></font></li>
         <li style="font-size:24px"><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/><br><font color="#fff"><p>Sunrise At Arches National Park</p></font></li>
