--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>R M Hunt Fine Art Landscape Oil Paintings</title>
 <meta charset="UTF-8" />
 <meta name="robots" content="index, follow">
-<meta name="author" content="R M Hunt">
-<meta name="description" content="Realist Fine Art Landscape Oil Paintings of America, South America and Europe ">
-<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
+<title>R M Hunt Fine Art Landscape Oil Paintings</title>
+<meta name="author" content="R M Hunt Fine Art Paintings">
+<meta name="description" content="Realist Fine Art Landscape Seascape Oil Paintings of America, South America and Europe ">
+<meta name="keywords" content="fine art, oil, paintings, landscapes, seascapes, nature, traditional, luminist, painter, artist, gallery, sanford gifford, worthington whittredge, kensett">
 <link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
+<link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
+<script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
 <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
@@ -15,30 +17,50 @@
 <style>
   body      {
     font-family: 'Cormorant SC';font-size: 38px;
-    background-color: rgb(000,000,000) !important;
-	
+    background-color: rgb(000, 000, 000); !important;
+    
 	}
 	hr.line1 {
   border-top: 1px solid white; width:20%;
   }
+  
 </style>
-    
-  </head>
-  <body><center>&ensp;
+</head>
+<body><center>&ensp;
   <font color="#fff"><center>R  M Hunt Fine Art</center></font>
-  <hr class="line1">&ensp;
-   
-    <center><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/></center>
-	&ensp;
-	<hr class="line1">
-    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html">For More Information Or Feedback</font></a><br>&copy; 2025 R M Hunt Fine Art</p></font>
-	<!--<script>
+  <hr class="line1">
+  <font color="#fff"><p style="font-size:24px">Selected Works</p></font>
+  <div class="swiffy-slider slider-nav-chevron slider-indicators-square slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein slider-nav-mousedrag">
+    <p><ul class="slider-container">
+        <li style="font-size:24px"><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur California Oil Painting" width="700" height="479"/><br><font color="#fff"><p>Lands End | Big Sur California</p></font></li>
+        <li style="font-size:24px"><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="842" height="479"/><br><font color="#fff"><p>Sunrise At Arches National Park</p></font></li>
+        <li style="font-size:24px"><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/><br><font color="#fff"><p>Sunset At Robbins Pond</p></font></li></li>
+		<li style="font-size:24px"><img src="https://roberthunt.com/images/pawnee.jpg" alt="Plains of Pawnee Buttes Colorado Oil Painting" width="918" height="479"/><br><font color="#fff"><p>Pawnee Buttes | Grasslands | Colorado</p></font></li>
+		<li style="font-size:24px"><img src="https://roberthunt.com/images/sea.jpg" alt="Dawn in Ricon del Mar Colombia" width="706" height="479"/><br><font color="#fff"><p>Dawn in Ricon del Mar Colombia</p></font></li>
+    </ul></p>
+
+    <button type="button" class="slider-nav"></button>
+    <button type="button" class="slider-nav slider-nav-next"></button>
+
+    <div class="slider-indicators">
+        <button class="active"></button>
+        <button></button>
+        <button></button>
+	    <button></button>
+		<button></button>
+	
+    </div>
+</div>
+&ensp;
+    <hr class="line1">
+    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html" target="_blank">For More Information Or Feedback</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
+<!--<script>
     document.addEventListener("contextmenu", function(e){
             e.preventDefault();
         }, false);
 </script>-->
 <script data-goatcounter="https://rmhunt.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
-  </center>
-  </body>
+</center>	
+ </body>
 </html>
