--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 &ensp;
     <hr class="line1">
-    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html" target="_blank">For More Information Or Feedback</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
+    <font color="#fff"><p style="font-size:20px"><font color="#fff"><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/about.html" target="_blank">About |  </a><a style="text-decoration: none; color: #fff;" href="https://roberthunt.com/info.html" target="_blank">Get In Touch</a></font><br>&copy; 2025 R M Hunt Fine Art</p></font>
 <!--<script>
     document.addEventListener("contextmenu", function(e){
             e.preventDefault();
